Fix an issue where image was cut off on smaller screens

--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -2,7 +2,8 @@
     height: 100vh; 
     display: flex;
     flex-direction: column; 
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 10rem 0;
 }
 
 .hero-section {
